Core package changed, Insert fully working now

--- a/clinic-client/src/main/resource/message_en_US.properties
+++ b/clinic-client/src/main/resource/message_en_US.properties
@@ -13,6 +13,7 @@ label.global.detailsPanel=Details Panel
 label.global.save=Save
 label.global.mandatoryValidation=Mandatory Field Validation
 label.global.correctFormat=Correct Format Validation
+label.global.dateFormatString=mm/dd/yyyy
 
 label.locationLookup.place=Place
 label.locationLookup.room=Room
@@ -30,10 +31,13 @@ text.mandatory.error.lotNo=Enter LotNo
 text.mandatory.error.medicine=Enter Medicine
 text.mandatory.error.location=Enter Location
 text.mandatory.error.unit=Enter Units
+text.mandatory.error.purchaseDttm=Enter Purchase Date
+text.mandatory.error.ExpiryDttm=Enter Expiry Date
 text.mandatory.error.costPerUnit=Enter Cost Per Unit
 
 text.correctFormat.error.unit=Units is a Number
 text.correctFormat.error.costPerUnit=Cost per Unit is a Number
+text.correctFormat.error.time=Enter time between 0 and 59
 
 heading.mainScreen=Clinic Application
 heading.inventoryScreen=Inventory Management
